--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGO_URI=mongodb+srv://dhimana862:tYG569pB96JhoFBI@cluster0.pzwok.mongodb.net/products?retryWrites=true&w=majority&appName=Cluster0
+PORT=5003
